<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="10"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="4"
        android:weightSum="6"
        android:gravity="center">

        <ImageView
            android:id="@+id/homePageAvatar"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/cureitfg" />

        <TextView
            android:id="@+id/greetings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/Black"
            android:textStyle="bold|italic"
            android:fontFamily="@font/roboto_medium"/>

        <TextView
            android:id="@+id/welcomeMsgview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/welcomeMsgText"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="4"
        android:gravity="center"
        android:weightSum="4">

        <Button
            android:id="@+id/injuryButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_background"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            android:text="@string/InjurySupport"/>
        
        <Button
            android:id="@+id/illnessButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_background"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            android:text="@string/IllnessSupport"/>
        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_background"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            android:text="@string/about"/>
        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_background"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            android:text="@string/Exit" />


    </LinearLayout>

</LinearLayout>